# zehner-electrode-thermal

./: .gitignore  CHANGELOG.md  Electrode.ipynb  Electrode_AI.ipynb  Electrode_validation.ipynb  Generalization_GDL.ipynb  ML.ipynb  Multiphysics.ipynb  PINN.ipynb  PUBLICATION_METHODS.md  README.md  Summary.ipynb  Symbolic Regression.ipynb  TECHNICAL_GUIDE.md  environment.yml  preliminaries.ipynb  pyproject.toml  requirements.txt  tmp_add_73.py  tmp_mine.py  tmp_mine2.py  tmp_mine3.py  tmp_pdf2.py  tmp_pdf3.py  tmp_pdf4.py  tmp_pdf_extract.py  tmp_test_contact.py  tmp_test_contact2.py  tmp_test_contact3.py
.github/workflows/: test.yml
data/processed/: zehner_dataset.parquet
data/raw/: abb32_profiles.csv  abb62_K_vs_dD.csv  gandert2023_calendering.csv  gdl_thermal_literature.csv  literature_meta.csv  messwerttabellen.csv  separator_electrode_literature.csv  steinhardt_18650_unitcell.csv  tab5_materials.csv  tab6_series.csv
outputs/20260610_153748_htZsZM/: checkpoint.pkl  hall_of_fame.csv
outputs/20260610_153819_5yWorR/: checkpoint.pkl  hall_of_fame.csv.bak
outputs/20260610_153909_AkYbX4/: checkpoint.pkl  hall_of_fame.csv.bak
outputs/20260610_153948_AVan3Y/: checkpoint.pkl  hall_of_fame.csv.bak
outputs/20260610_154006_KaXSJ6/: checkpoint.pkl  hall_of_fame.csv
publication/: README.md  main.tex  make_figures.py  measurement_request_partner.md  references.bib  vortrag_20min_DE.txt
results/: key_numbers.json
src/: build_dataset.py  electrode_data.py  electrode_thermal.py  experiment_design.py  fluid_properties.py  key_results.py  materials.py  zbs.py  zbs_jax.py
src/zbs_electrode.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/: test_electrode_thermal.py  test_key_results.py
